fix: add and test proper Swagger annotations
